// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RDS .createNonprodDatabase() matches snapshot 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "PreFixPgSgA3217258": {
      "Properties": {
        "GroupDescription": "Default/PreFixPgSg",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "VpcID703024FC": {
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "VpcIDIGW70D85C75": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "VpcIDIsolatedSubnet1RouteTableAssociationC2ECBCF5": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDIsolatedSubnet1RouteTableCF9B88CE",
        },
        "SubnetId": {
          "Ref": "VpcIDIsolatedSubnet1SubnetFCDAB651",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDIsolatedSubnet1RouteTableCF9B88CE": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDIsolatedSubnet1SubnetFCDAB651": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.64.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDIsolatedSubnet2RouteTable9A3A82EF": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDIsolatedSubnet2RouteTableAssociation88968DE6": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDIsolatedSubnet2RouteTable9A3A82EF",
        },
        "SubnetId": {
          "Ref": "VpcIDIsolatedSubnet2Subnet52CFD445",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDIsolatedSubnet2Subnet52CFD445": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.96.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDPrivateSubnet1DefaultRouteD7C53805": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcIDPublicSubnet1NATGateway3C86780D",
        },
        "RouteTableId": {
          "Ref": "VpcIDPrivateSubnet1RouteTableFC20DF64",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcIDPrivateSubnet1RouteTableAssociation43036593": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDPrivateSubnet1RouteTableFC20DF64",
        },
        "SubnetId": {
          "Ref": "VpcIDPrivateSubnet1SubnetE31736A9",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDPrivateSubnet1RouteTableFC20DF64": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDPrivateSubnet1SubnetE31736A9": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.128.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDPrivateSubnet2DefaultRoute21C5563B": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcIDPublicSubnet2NATGatewayF1C39B22",
        },
        "RouteTableId": {
          "Ref": "VpcIDPrivateSubnet2RouteTable9348734A",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcIDPrivateSubnet2RouteTable9348734A": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PrivateSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDPrivateSubnet2RouteTableAssociationD9C8D78D": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDPrivateSubnet2RouteTable9348734A",
        },
        "SubnetId": {
          "Ref": "VpcIDPrivateSubnet2SubnetC6B60E3F",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDPrivateSubnet2SubnetC6B60E3F": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.160.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/PrivateSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDPublicSubnet1DefaultRoute73EE5304": {
      "DependsOn": [
        "VpcIDVPCGWE6968D99",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIDIGW70D85C75",
        },
        "RouteTableId": {
          "Ref": "VpcIDPublicSubnet1RouteTableA9496B93",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcIDPublicSubnet1EIP66CFB463": {
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet1",
          },
        ],
      },
      "Type": "AWS::EC2::EIP",
    },
    "VpcIDPublicSubnet1NATGateway3C86780D": {
      "DependsOn": [
        "VpcIDPublicSubnet1DefaultRoute73EE5304",
        "VpcIDPublicSubnet1RouteTableAssociation2D570C68",
      ],
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VpcIDPublicSubnet1EIP66CFB463",
            "AllocationId",
          ],
        },
        "SubnetId": {
          "Ref": "VpcIDPublicSubnet1Subnet49ECF0B5",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet1",
          },
        ],
      },
      "Type": "AWS::EC2::NatGateway",
    },
    "VpcIDPublicSubnet1RouteTableA9496B93": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDPublicSubnet1RouteTableAssociation2D570C68": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDPublicSubnet1RouteTableA9496B93",
        },
        "SubnetId": {
          "Ref": "VpcIDPublicSubnet1Subnet49ECF0B5",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDPublicSubnet1Subnet49ECF0B5": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.0.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDPublicSubnet2DefaultRoute16A93887": {
      "DependsOn": [
        "VpcIDVPCGWE6968D99",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIDIGW70D85C75",
        },
        "RouteTableId": {
          "Ref": "VpcIDPublicSubnet2RouteTable7E67B44D",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcIDPublicSubnet2EIPF974E61A": {
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet2",
          },
        ],
      },
      "Type": "AWS::EC2::EIP",
    },
    "VpcIDPublicSubnet2NATGatewayF1C39B22": {
      "DependsOn": [
        "VpcIDPublicSubnet2DefaultRoute16A93887",
        "VpcIDPublicSubnet2RouteTableAssociation5A90573C",
      ],
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VpcIDPublicSubnet2EIPF974E61A",
            "AllocationId",
          ],
        },
        "SubnetId": {
          "Ref": "VpcIDPublicSubnet2SubnetBF551D4B",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet2",
          },
        ],
      },
      "Type": "AWS::EC2::NatGateway",
    },
    "VpcIDPublicSubnet2RouteTable7E67B44D": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDPublicSubnet2RouteTableAssociation5A90573C": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDPublicSubnet2RouteTable7E67B44D",
        },
        "SubnetId": {
          "Ref": "VpcIDPublicSubnet2SubnetBF551D4B",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDPublicSubnet2SubnetBF551D4B": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.32.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDVPCGWE6968D99": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "VpcIDIGW70D85C75",
        },
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
    "prefixdb18576AA2": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AllocatedStorage": "100",
        "BackupRetentionPeriod": 0,
        "CopyTagsToSnapshot": true,
        "DBInstanceClass": "db.t4g.micro",
        "DBName": "pre_fix_db",
        "DBSubnetGroupName": {
          "Ref": "prefixdbSubnetGroup5C13C131",
        },
        "Engine": "postgres",
        "EngineVersion": "16.3",
        "MasterUserPassword": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "prefixdbSecret32B5B21A",
              },
              ":SecretString:password::}}",
            ],
          ],
        },
        "MasterUsername": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "prefixdbSecret32B5B21A",
              },
              ":SecretString:username::}}",
            ],
          ],
        },
        "MultiAZ": false,
        "PubliclyAccessible": false,
        "StorageType": "standard",
        "VPCSecurityGroups": [
          {
            "Fn::GetAtt": [
              "PreFixPgSgA3217258",
              "GroupId",
            ],
          },
        ],
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Delete",
    },
    "prefixdbSecret32B5B21A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": {
          "Fn::Join": [
            "",
            [
              "Generated by the CDK for stack: ",
              {
                "Ref": "AWS::StackName",
              },
            ],
          ],
        },
        "GenerateSecretString": {
          "ExcludeCharacters": " %+~\`#$&*()|[]{}:;<>?!'/@"\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{"username":"postgres"}",
        },
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "prefixdbSecretAttachment30ED2F86": {
      "Properties": {
        "SecretId": {
          "Ref": "prefixdbSecret32B5B21A",
        },
        "TargetId": {
          "Ref": "prefixdb18576AA2",
        },
        "TargetType": "AWS::RDS::DBInstance",
      },
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
    },
    "prefixdbSubnetGroup5C13C131": {
      "Properties": {
        "DBSubnetGroupDescription": "Subnet group for pre_fix_db database",
        "SubnetIds": [
          {
            "Ref": "VpcIDPublicSubnet1Subnet49ECF0B5",
          },
          {
            "Ref": "VpcIDPublicSubnet2SubnetBF551D4B",
          },
        ],
      },
      "Type": "AWS::RDS::DBSubnetGroup",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`RDS .createProdRdsDatabase() matches snapshot 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "PreFixPgSgA3217258": {
      "Properties": {
        "GroupDescription": "Default/PreFixPgSg",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "VpcID703024FC": {
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "VpcIDIGW70D85C75": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "VpcIDIsolatedSubnet1RouteTableAssociationC2ECBCF5": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDIsolatedSubnet1RouteTableCF9B88CE",
        },
        "SubnetId": {
          "Ref": "VpcIDIsolatedSubnet1SubnetFCDAB651",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDIsolatedSubnet1RouteTableCF9B88CE": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDIsolatedSubnet1SubnetFCDAB651": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.64.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDIsolatedSubnet2RouteTable9A3A82EF": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDIsolatedSubnet2RouteTableAssociation88968DE6": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDIsolatedSubnet2RouteTable9A3A82EF",
        },
        "SubnetId": {
          "Ref": "VpcIDIsolatedSubnet2Subnet52CFD445",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDIsolatedSubnet2Subnet52CFD445": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.96.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDPrivateSubnet1DefaultRouteD7C53805": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcIDPublicSubnet1NATGateway3C86780D",
        },
        "RouteTableId": {
          "Ref": "VpcIDPrivateSubnet1RouteTableFC20DF64",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcIDPrivateSubnet1RouteTableAssociation43036593": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDPrivateSubnet1RouteTableFC20DF64",
        },
        "SubnetId": {
          "Ref": "VpcIDPrivateSubnet1SubnetE31736A9",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDPrivateSubnet1RouteTableFC20DF64": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDPrivateSubnet1SubnetE31736A9": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.128.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDPrivateSubnet2DefaultRoute21C5563B": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcIDPublicSubnet2NATGatewayF1C39B22",
        },
        "RouteTableId": {
          "Ref": "VpcIDPrivateSubnet2RouteTable9348734A",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcIDPrivateSubnet2RouteTable9348734A": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PrivateSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDPrivateSubnet2RouteTableAssociationD9C8D78D": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDPrivateSubnet2RouteTable9348734A",
        },
        "SubnetId": {
          "Ref": "VpcIDPrivateSubnet2SubnetC6B60E3F",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDPrivateSubnet2SubnetC6B60E3F": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.160.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/PrivateSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDPublicSubnet1DefaultRoute73EE5304": {
      "DependsOn": [
        "VpcIDVPCGWE6968D99",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIDIGW70D85C75",
        },
        "RouteTableId": {
          "Ref": "VpcIDPublicSubnet1RouteTableA9496B93",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcIDPublicSubnet1EIP66CFB463": {
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet1",
          },
        ],
      },
      "Type": "AWS::EC2::EIP",
    },
    "VpcIDPublicSubnet1NATGateway3C86780D": {
      "DependsOn": [
        "VpcIDPublicSubnet1DefaultRoute73EE5304",
        "VpcIDPublicSubnet1RouteTableAssociation2D570C68",
      ],
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VpcIDPublicSubnet1EIP66CFB463",
            "AllocationId",
          ],
        },
        "SubnetId": {
          "Ref": "VpcIDPublicSubnet1Subnet49ECF0B5",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet1",
          },
        ],
      },
      "Type": "AWS::EC2::NatGateway",
    },
    "VpcIDPublicSubnet1RouteTableA9496B93": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDPublicSubnet1RouteTableAssociation2D570C68": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDPublicSubnet1RouteTableA9496B93",
        },
        "SubnetId": {
          "Ref": "VpcIDPublicSubnet1Subnet49ECF0B5",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDPublicSubnet1Subnet49ECF0B5": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.0.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDPublicSubnet2DefaultRoute16A93887": {
      "DependsOn": [
        "VpcIDVPCGWE6968D99",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIDIGW70D85C75",
        },
        "RouteTableId": {
          "Ref": "VpcIDPublicSubnet2RouteTable7E67B44D",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcIDPublicSubnet2EIPF974E61A": {
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet2",
          },
        ],
      },
      "Type": "AWS::EC2::EIP",
    },
    "VpcIDPublicSubnet2NATGatewayF1C39B22": {
      "DependsOn": [
        "VpcIDPublicSubnet2DefaultRoute16A93887",
        "VpcIDPublicSubnet2RouteTableAssociation5A90573C",
      ],
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VpcIDPublicSubnet2EIPF974E61A",
            "AllocationId",
          ],
        },
        "SubnetId": {
          "Ref": "VpcIDPublicSubnet2SubnetBF551D4B",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet2",
          },
        ],
      },
      "Type": "AWS::EC2::NatGateway",
    },
    "VpcIDPublicSubnet2RouteTable7E67B44D": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDPublicSubnet2RouteTableAssociation5A90573C": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDPublicSubnet2RouteTable7E67B44D",
        },
        "SubnetId": {
          "Ref": "VpcIDPublicSubnet2SubnetBF551D4B",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDPublicSubnet2SubnetBF551D4B": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.32.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDVPCGWE6968D99": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "VpcIDIGW70D85C75",
        },
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
    "prefixdb18576AA2": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AllocatedStorage": "20",
        "BackupRetentionPeriod": 14,
        "CopyTagsToSnapshot": true,
        "DBInstanceClass": "db.t4g.medium",
        "DBName": "pre_fix_db",
        "DBSubnetGroupName": {
          "Ref": "prefixdbSubnetGroup5C13C131",
        },
        "DeletionProtection": true,
        "EnablePerformanceInsights": true,
        "Engine": "postgres",
        "EngineVersion": "16.6",
        "MasterUserPassword": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "prefixdbSecret32B5B21A",
              },
              ":SecretString:password::}}",
            ],
          ],
        },
        "MasterUsername": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "prefixdbSecret32B5B21A",
              },
              ":SecretString:username::}}",
            ],
          ],
        },
        "MaxAllocatedStorage": 1024,
        "MultiAZ": true,
        "PerformanceInsightsRetentionPeriod": 7,
        "PubliclyAccessible": false,
        "StorageEncrypted": true,
        "StorageType": "gp3",
        "VPCSecurityGroups": [
          {
            "Fn::GetAtt": [
              "PreFixPgSgA3217258",
              "GroupId",
            ],
          },
        ],
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Retain",
    },
    "prefixdbSecret32B5B21A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": {
          "Fn::Join": [
            "",
            [
              "Generated by the CDK for stack: ",
              {
                "Ref": "AWS::StackName",
              },
            ],
          ],
        },
        "GenerateSecretString": {
          "ExcludeCharacters": " %+~\`#$&*()|[]{}:;<>?!'/@"\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{"username":"postgres"}",
        },
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "prefixdbSecretAttachment30ED2F86": {
      "Properties": {
        "SecretId": {
          "Ref": "prefixdbSecret32B5B21A",
        },
        "TargetId": {
          "Ref": "prefixdb18576AA2",
        },
        "TargetType": "AWS::RDS::DBInstance",
      },
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
    },
    "prefixdbSubnetGroup5C13C131": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "DBSubnetGroupDescription": "Subnet group for pre_fix_db database",
        "SubnetIds": [
          {
            "Ref": "VpcIDIsolatedSubnet1SubnetFCDAB651",
          },
          {
            "Ref": "VpcIDIsolatedSubnet2Subnet52CFD445",
          },
        ],
      },
      "Type": "AWS::RDS::DBSubnetGroup",
      "UpdateReplacePolicy": "Retain",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`RDS .createRdsDatabase() matches snapshot 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "PreFixPgSgA3217258": {
      "Properties": {
        "GroupDescription": "Default/PreFixPgSg",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "VpcID703024FC": {
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "VpcIDIGW70D85C75": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "VpcIDIsolatedSubnet1RouteTableAssociationC2ECBCF5": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDIsolatedSubnet1RouteTableCF9B88CE",
        },
        "SubnetId": {
          "Ref": "VpcIDIsolatedSubnet1SubnetFCDAB651",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDIsolatedSubnet1RouteTableCF9B88CE": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDIsolatedSubnet1SubnetFCDAB651": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.64.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/IsolatedSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDIsolatedSubnet2RouteTable9A3A82EF": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDIsolatedSubnet2RouteTableAssociation88968DE6": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDIsolatedSubnet2RouteTable9A3A82EF",
        },
        "SubnetId": {
          "Ref": "VpcIDIsolatedSubnet2Subnet52CFD445",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDIsolatedSubnet2Subnet52CFD445": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.96.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Isolated",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/IsolatedSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDPrivateSubnet1DefaultRouteD7C53805": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcIDPublicSubnet1NATGateway3C86780D",
        },
        "RouteTableId": {
          "Ref": "VpcIDPrivateSubnet1RouteTableFC20DF64",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcIDPrivateSubnet1RouteTableAssociation43036593": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDPrivateSubnet1RouteTableFC20DF64",
        },
        "SubnetId": {
          "Ref": "VpcIDPrivateSubnet1SubnetE31736A9",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDPrivateSubnet1RouteTableFC20DF64": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDPrivateSubnet1SubnetE31736A9": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.128.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDPrivateSubnet2DefaultRoute21C5563B": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcIDPublicSubnet2NATGatewayF1C39B22",
        },
        "RouteTableId": {
          "Ref": "VpcIDPrivateSubnet2RouteTable9348734A",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcIDPrivateSubnet2RouteTable9348734A": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PrivateSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDPrivateSubnet2RouteTableAssociationD9C8D78D": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDPrivateSubnet2RouteTable9348734A",
        },
        "SubnetId": {
          "Ref": "VpcIDPrivateSubnet2SubnetC6B60E3F",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDPrivateSubnet2SubnetC6B60E3F": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.160.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/PrivateSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDPublicSubnet1DefaultRoute73EE5304": {
      "DependsOn": [
        "VpcIDVPCGWE6968D99",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIDIGW70D85C75",
        },
        "RouteTableId": {
          "Ref": "VpcIDPublicSubnet1RouteTableA9496B93",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcIDPublicSubnet1EIP66CFB463": {
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet1",
          },
        ],
      },
      "Type": "AWS::EC2::EIP",
    },
    "VpcIDPublicSubnet1NATGateway3C86780D": {
      "DependsOn": [
        "VpcIDPublicSubnet1DefaultRoute73EE5304",
        "VpcIDPublicSubnet1RouteTableAssociation2D570C68",
      ],
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VpcIDPublicSubnet1EIP66CFB463",
            "AllocationId",
          ],
        },
        "SubnetId": {
          "Ref": "VpcIDPublicSubnet1Subnet49ECF0B5",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet1",
          },
        ],
      },
      "Type": "AWS::EC2::NatGateway",
    },
    "VpcIDPublicSubnet1RouteTableA9496B93": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDPublicSubnet1RouteTableAssociation2D570C68": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDPublicSubnet1RouteTableA9496B93",
        },
        "SubnetId": {
          "Ref": "VpcIDPublicSubnet1Subnet49ECF0B5",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDPublicSubnet1Subnet49ECF0B5": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.0.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDPublicSubnet2DefaultRoute16A93887": {
      "DependsOn": [
        "VpcIDVPCGWE6968D99",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIDIGW70D85C75",
        },
        "RouteTableId": {
          "Ref": "VpcIDPublicSubnet2RouteTable7E67B44D",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "VpcIDPublicSubnet2EIPF974E61A": {
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet2",
          },
        ],
      },
      "Type": "AWS::EC2::EIP",
    },
    "VpcIDPublicSubnet2NATGatewayF1C39B22": {
      "DependsOn": [
        "VpcIDPublicSubnet2DefaultRoute16A93887",
        "VpcIDPublicSubnet2RouteTableAssociation5A90573C",
      ],
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VpcIDPublicSubnet2EIPF974E61A",
            "AllocationId",
          ],
        },
        "SubnetId": {
          "Ref": "VpcIDPublicSubnet2SubnetBF551D4B",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet2",
          },
        ],
      },
      "Type": "AWS::EC2::NatGateway",
    },
    "VpcIDPublicSubnet2RouteTable7E67B44D": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "VpcIDPublicSubnet2RouteTableAssociation5A90573C": {
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcIDPublicSubnet2RouteTable7E67B44D",
        },
        "SubnetId": {
          "Ref": "VpcIDPublicSubnet2SubnetBF551D4B",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "VpcIDPublicSubnet2SubnetBF551D4B": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.0.32.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Default/VpcID/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "VpcIDVPCGWE6968D99": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "VpcIDIGW70D85C75",
        },
        "VpcId": {
          "Ref": "VpcID703024FC",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
    "prefixdb18576AA2": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AllocatedStorage": "100",
        "BackupRetentionPeriod": 0,
        "CopyTagsToSnapshot": true,
        "DBInstanceClass": "db.t4g.micro",
        "DBName": "pre_fix_db",
        "DBSubnetGroupName": {
          "Ref": "prefixdbSubnetGroup5C13C131",
        },
        "Engine": "postgres",
        "EngineVersion": "16.6",
        "MasterUserPassword": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "prefixdbSecret32B5B21A",
              },
              ":SecretString:password::}}",
            ],
          ],
        },
        "MasterUsername": {
          "Fn::Join": [
            "",
            [
              "{{resolve:secretsmanager:",
              {
                "Ref": "prefixdbSecret32B5B21A",
              },
              ":SecretString:username::}}",
            ],
          ],
        },
        "MultiAZ": false,
        "PubliclyAccessible": false,
        "StorageType": "standard",
        "VPCSecurityGroups": [
          {
            "Fn::GetAtt": [
              "PreFixPgSgA3217258",
              "GroupId",
            ],
          },
        ],
      },
      "Type": "AWS::RDS::DBInstance",
      "UpdateReplacePolicy": "Delete",
    },
    "prefixdbSecret32B5B21A": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": {
          "Fn::Join": [
            "",
            [
              "Generated by the CDK for stack: ",
              {
                "Ref": "AWS::StackName",
              },
            ],
          ],
        },
        "GenerateSecretString": {
          "ExcludeCharacters": " %+~\`#$&*()|[]{}:;<>?!'/@"\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{"username":"postgres"}",
        },
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "prefixdbSecretAttachment30ED2F86": {
      "Properties": {
        "SecretId": {
          "Ref": "prefixdbSecret32B5B21A",
        },
        "TargetId": {
          "Ref": "prefixdb18576AA2",
        },
        "TargetType": "AWS::RDS::DBInstance",
      },
      "Type": "AWS::SecretsManager::SecretTargetAttachment",
    },
    "prefixdbSubnetGroup5C13C131": {
      "Properties": {
        "DBSubnetGroupDescription": "Subnet group for pre_fix_db database",
        "SubnetIds": [
          {
            "Ref": "VpcIDIsolatedSubnet1SubnetFCDAB651",
          },
          {
            "Ref": "VpcIDIsolatedSubnet2Subnet52CFD445",
          },
        ],
      },
      "Type": "AWS::RDS::DBSubnetGroup",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
